--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -1,9 +1,11 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a
-        href="#"
-        class="list-group-item"
+      <a 
+      [routerLink]="['/servers',5,'edit']" 
+      [queryParams]="{allowEdit:'1'}" 
+      fragment="loading"
+      href="#" class="list-group-item"
         *ngFor="let server of servers">
         {{ server.name }}
       </a>
@@ -16,4 +18,3 @@
     <app-server></app-server>
   </div>
 </div>
-
