--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -1,12 +1,10 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a 
-      [routerLink]="['/servers',server.id]" 
-      [queryParams]="{allowEdit:'1'}" 
+      <a [routerLink]="['/servers',server.id]" 
+      [queryParams]="{allowEdit: server.id===3?'1':'0'}" 
       fragment="loading"
-      href="#" class="list-group-item"
-        *ngFor="let server of servers">
+        href="#" class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
